# inf-computer-graphics-project

./: CMakeLists.txt  README.md  camera.cpp  camera.h  cgp.pro  glwidget.cpp  glwidget.h  input.cpp  input.h  light.cpp  light.h  lightobject.cpp  lightobject.h  main.cpp  model.cpp  model.h  object.cpp  object.h  scene.cpp  scene.h
files/: brickwall.mtl  env.mtl  files.qrc  lamp.mtl  scene1.txt  scene2.txt  smoothenv.mtl
shaders/: lightshader.frag  lightshader.vert  pickingshader.frag  shader.frag  shader.vert  shaders.qrc
